Bug 248083 - Problem in Kmymoney 3.98 with mortgage loans (incorrect balance & crashes)
Summary: Problem in Kmymoney 3.98 with mortgage loans (incorrect balance & crashes)
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-16 20:10 UTC by Unknown
Modified: 2010-08-22 01:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2010-08-16 20:10:30 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

Since I opened my mortgage account in October 2009 with my Bank, I keep entering the scheduled transaction that KMM created for me, but since that moment, the balance (Principal) has always been off and the difference keeps growing up... After only 10 months or so in my mortgage, I am over $200 off of my real balance.

I am pretty sure I entered all information correctly when I created the loan account.

My second problem is that my bank recently informed me that they increased my property tax payment.  When I created my loan account, I entered extra fees (such as mortgage insurance, property taxes) and tried to modify the amount for the property taxes but KMM says "Unable to modify scheduled transaction 'Loan payment for Mortgage'" & "Cannot add split that does not contain an account reference"...

Reproducible: Always

Steps to Reproduce:
1-Right click on mortgage account (loan) & click "Edit scheduled transaction";
2-Click next in the "Edit loan wizard";
3-Select "Modify additional fees" & click "Next";
4-Selected a date corresponding to the date the bank warned me (3 days prior to my payment);
5-Clicked on "Additional fees";
6-Clicked "Next";
7-Clicked "Finish";
Got the error popup...

Actual Results:  
Get a error popup saying: "Unable to modify scheduled transaction 'Loan payment for Mortgage'" & if I click on details, I get "Cannot add split that does not contain an account reference"...

Expected Results:  
Modify the additional fees without error

OS: Linux (i686) release 2.6.33.4-smp
Compiler: gcc
KMM V3.98.1
OS: Slackware Linux 13.1
Comment 1 Alvaro Soliverez 2010-08-21 03:11:33 UTC
Please, try to reproduce this with the latest version 4.5, because that area has gone through a major change.
I tried to reproduce it here, with a car loan from November last year, and it worked here.
Comment 2 Unknown 2010-08-21 03:41:38 UTC
Mr. Soliverez,

I am currently using version 3.98.1 installed from sources taken from the
KmyMoney website.  I no longer have the sources.  How can I uninstall the
version 3.98.1 to install the version 4.5 instead?

The readme file in the sources indicates to type "make uninstall" in order
to uninstall a version.  Is that correct?

Thanks!

On Fri, Aug 20, 2010 at 9:11 PM, Alvaro Soliverez <asoliverez@gmail.com>wrote:

> https://bugs.kde.org/show_bug.cgi?id=248083
>
>
>
>
>
> --- Comment #1 from Alvaro Soliverez <asoliverez gmail com>  2010-08-21
> 03:11:33 ---
> Please, try to reproduce this with the latest version 4.5, because that
> area
> has gone through a major change.
> I tried to reproduce it here, with a car loan from November last year, and
> it
> worked here.
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 3 Alvaro Soliverez 2010-08-21 05:02:35 UTC
Download again 3.98.1, compile and reinstall. Then, uninstall.

Try to find a package for your distro. Otherwise, download the source tarball for 4.5 and install from there. Do not erase the source this time.
Comment 4 Unknown 2010-08-21 06:02:08 UTC
I successfully managed to remove 3.98.1 and install 4.5

I tried to modify my extra fees (in the loan) by right clicking on the mortgage account in the accounts window, and then selecting Edit Account.  The operation completed without errors or warnings but being suspicious, I decided to go in the scheduled transactions to confirm the amount has been revised.  In fact, it has not, so I decided to retry from the scheduled transactions.  I right clicked on the scheduled trans. and then selected "edit scheduled transaction" to end up in the same wizard as before.  At the end, it warned me again that"Unable to modify scheduled transaction 'Loan payment for Mortgage'" & "Cannot add split that does not contain an account reference"...

So to recap, I think there is 2 different problems.

1-KMM does not sync the scheduled transactions with the modifications in the accounts
2-The problem I am experiencing with modifying the amount as described above.

Please do not hesitate to ask for more info or anything else, I need to get this fixed as much as the community do.
Comment 5 Alvaro Soliverez 2010-08-21 15:24:08 UTC
The payment account is not found when creating the schedule. It is not even loaded on the variable.
My guess is the issue is that the payment account page is not revisited when modifying only the payments, therefore the payment account data is not loaded, and it throws the error later on.
Comment 6 Unknown 2010-08-21 21:08:33 UTC
Ok So what would be the corrective action?  I not quite understand what you said...
Comment 7 Alvaro Soliverez 2010-08-22 01:46:30 UTC
SVN commit 1166488 by asoliverez:

Added the account and category selection pages to the wizard of other loan info.

BUG:248083

 M  +2 -0      keditloanwizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1166488
Comment 8 Alvaro Soliverez 2010-08-22 01:49:12 UTC
SVN commit 1166490 by asoliverez:

Added the account and category selection pages to the wizard of other loan info.
Backported to stable branch.

BUG:248083

 M  +2 -0      keditloanwizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1166490