Added the account and category selection pages to the wizard of other loan info.

BUG:248083

svn path=/trunk/extragear/office/kmymoney/; revision=1166488